--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
@@ -33,5 +34,6 @@
         <p id="endnote">Only time will tell what happens to Amazon in the future, however, in the meantime, you can learn more about its past <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Amazon_(company)#History"> here </a></p>
         </div>
     </main>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
